Correction post-soutenance pour préciser les critère de validité des input prénom et nom (pas de chiffre), et pour afficher une erreur lorsque l'on tape manuellement une date de naissance non conforme au bon sens.

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -105,7 +105,7 @@
                   name="email"
                 />
               </div>
-              <div class="formData" data-error="&nbsp;">
+              <div class="formData" data-error-small="&nbsp;">
                 <label for="birthdate">Date de naissance</label><br />
                 <input
                   class="text-control"
